vlib/v/parser/tests/register_imported_struct.out
vlib/v/parser/tests/register_imported_struct.vv:2:8: error: cannot register struct `File`, this type was already imported
    1 | import os { File }
    2 | struct File {}
      |        ~~~~
