vlib/v/parser/tests/register_imported_struct.vv
import os { File }
struct File {}
